hard-gists/2005165/run.log
=== Docker Run Log for 2005165 ===
Started at: Mi 29. Okt 12:56:21 CET 2025

[2025-10-29 12:56:21] START: Running container for 2005165
[2025-10-29 12:56:21] SUCCESS: Container 165213d82e7eeec72ef8d87884c88063df16418c5e1fa0ea4ca5cf16850fc5a8 started for 2005165
=== Container logs for 2005165 ===
  File "/snippet.py", line 26
    except ValueError, IndexError:
           ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 2005165 ===
[2025-10-29 12:56:23] INFO: Container 165213d82e7eeec72ef8d87884c88063df16418c5e1fa0ea4ca5cf16850fc5a8 has stopped
